--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "isvalid": "^1.6.6",
     "mysql": "^2.13.0",
     "mysql2": "^1.3.5",
     "restify": "^5.0.0",
